[feature]: customize navigation bar

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "fela": "^6.1.0",
     "flow-bin": "^0.56.0",
     "history": "^4.7.2",
     "preact": "^8.2.7",
+    "preact-fela": "^6.1.1",
     "preact-redux": "^2.0.3",
     "preact-router": "^2.6.0",
     "redux": "^3.7.2",
