--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
   "presets": ["stage-2", "stage-3", "flow", "stage-0", "react"],
   "plugins": [
-    ["transform-react-jsx", { "pragma":"h" }]
-  ]
+          ["transform-react-jsx", { "pragma":"h" }],
+          ["module-resolver", {
+          "root": ["."],
+          "alias": {
+              "react": "preact-compat",
+              "react-dom": "preact-compat"
+          }
+          }]
+      ]
 }
