--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
@@ -32,11 +33,16 @@
     "fela": "^6.1.0",
     "flow-bin": "^0.56.0",
     "history": "^4.7.2",
+    "pikaday": "^1.7.0",
     "preact": "^8.2.7",
+    "preact-compat": "^3.17.0",
+    "preact-datepicker": "^0.1.0",
     "preact-fela": "^6.1.1",
     "preact-redux": "^2.0.3",
     "preact-router": "^2.6.0",
     "ramda": "^0.25.0",
+    "react": "15.5.4",
+    "react-day-picker": "5.4.3",
     "redux": "^3.7.2",
     "webpack": "^3.6.0",
     "webpack-livereload-plugin": "^1.0.0"
