[feature]: create user and room fragment

--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "eslint-plugin-standard": "^3.0.1",
     "fela": "^6.1.0",
     "flow-bin": "^0.56.0",
+    "graphql": "^0.12.3",
     "history": "^4.7.2",
+    "lokka": "^1.7.0",
+    "lokka-transport-http": "^1.6.1",
     "pikaday": "^1.7.0",
     "preact": "^8.2.7",
     "preact-compat": "^3.17.0",
