--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "redux-saga": "^0.16.0",
     "webpack": "^3.6.0",
     "webpack-livereload-plugin": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.5.1"
   }
 }
