[feature]: add css modules support

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "history": "^4.7.2",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.6.1",
+    "node-sass": "^4.7.2",
     "pikaday": "^1.7.0",
+    "postcss-modules": "^1.1.0",
     "preact": "^8.2.7",
     "preact-compat": "^3.17.0",
     "preact-datepicker": "^0.1.0",
