[feature]: handling remove user from list

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
+    "classnames": "^2.2.5",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-flowtype": "^2.37.0",
